--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,14 @@ body, html{
 .pimg1, .pimg2, .pimg3{
 	position:relative;
 	opacity: 0.70;
-	background-position: center;
+	background-position:center;
 	background-size: cover;
 	background-repeat: no-repeat;
+
+	/*
+	fixed = parallax
+	scroll = normal
+	*/
 	background-attachment: fixed;
 }
 
@@ -31,4 +36,46 @@ body, html{
 .pimg3{
 	background-image: url('../img/image3.jpg');
 	min-height: 400px;
+}
+
+.section{
+	text-align:center;
+	padding: 50px 80px;
+}
+
+.section-light{
+	background-color: #f4f4f4;
+	color:#666;
+}
+
+.section-dark{
+	background-color: #282e34;
+	color:#ddd;
+}
+
+.ptext{
+	position: absolute;
+	top: 50%;
+	width:100%;
+	text-align:center;
+	color: #000;
+	font-size: 27px;
+	letter-spacing: 8px;
+	text-transform: uppercase;
+}
+
+.ptext .border{
+	background-color: #111;
+	color:#fff;
+	padding:20px;
+}
+
+.ptext .border.trans{
+	background-color: transparent;
+}
+
+@media(max-width:568px){
+	.pimg1, .pimg2, .pimg3{
+		background-attachment: scroll;	
+	}
 }
